handle index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<p>
 	在林徽因写给费正清和费慰梅夫妇的信里，开篇往往会有见字如面几个字。特别喜欢见字如面的感觉。当时车马远，割不断相思。
 	</p>
-	<ul>
-		<li><a href="mytask0.html">task0-九宫格</a></li>
+	<ul class="jnshu">
+		<li><a href="jnshu/mytask0.html">task0-九宫格</a></li>
 	</ul>
 	
 </body>
