--- a/jnshu/index.html
+++ b/jnshu/index.html
@@ -19,7 +19,7 @@
 	在林徽因写给费正清和费慰梅夫妇的信里，开篇往往会有见字如面几个字。特别喜欢见字如面的感觉。当时车马远，割不断相思。
 	</p>
 	<ul class="jnshu">
-		<li><a href="jnshu/mytask0.html">task0-九宫格</a></li>
+		<li><a href="mytask0.html">task0-九宫格</a></li>
 	</ul>
 	
 </body>
