upload jnshu mytask2

--- a/_posts/2018-02-13-jnshu.html
+++ b/_posts/2018-02-13-jnshu.html
@@ -13,6 +13,8 @@ tags:
 </p>
 <ul class="jnshu">
 	<li><a href="/jnshu/mytask0.html">task0-九宫格</a></li>
+	<li><a href="https://giselle527.github.io/">task1-见字如面blog</a></li>
+	<li><a href="/jnshu/mytask2/index.html">task2-魔镜</a></li>
 </ul>	
 <p>
 	多谢阅览。
