--- a/jnshu/mytask2/index.html
+++ b/jnshu/mytask2/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>魔镜</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="index.css" rel="stylesheet"/>
 </head>
 <body>
@@ -23,12 +24,26 @@
 				<li class="bat_image"><img src="../images/task3_battery_04.png"></li>
 			</ul>
 		</header>
-		<nav class="">
-			<a>〈 返回</a>
-			<h1 class="title">魔镜</h1>
-			<a>...</a>
+		<nav>
+			<a class="back">返回</a>
+			<h2 class="title">魔镜</h2>
+			<a></a>
 		</nav>
-		<section></section>
+		<section class="content">
+			<a class="backward"></a>
+			<img class="logo" src="../images/task3_logo_08.png" />
+			<p class="cont_text">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
+			<div class="intro">
+				<div class="intro_left">
+					<img class="pic_left" src="../images/task3_round_09.png" />
+					<span class="text_left">290560933</span>
+				</div>
+				<div class="intro_right">
+					<img class="pic_right" src="../images/task3_round_10.png" />
+					<span class="text_right">BJPTTeng</span>
+				</div>
+			</div>
+		</section>
 	</div>
 	
 </body>
