--- a/jnshu/mytask2/index.html
+++ b/jnshu/mytask2/index.html
@@ -17,7 +17,7 @@
 				<li></li>
 			</ul>
 			<span class="head_text">Applidium</span>
-			<img class="head_signal" src="../images/task3_signal_03.png" />
+			<span class="signal_box"><img class="head_signal" src="../images/task3_signal_03.png" /></span>
 			<span class="head_time">11:27 AM</span>
 			<ul class="battery">
 				<li class="bat_percent">100 %</li>
