--- a/jnshu/mytask2/index.html
+++ b/jnshu/mytask2/index.html
@@ -9,15 +9,17 @@
 <body>
 	<div class="wrap">
 		<header class="head">
-			<ul class="dot_list clearfix">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
-			<span class="head_text">Applidium</span>
-			<span class="signal_box"><img class="head_signal" src="../images/task3_signal_03.png" /></span>
+			<div class="head_box">
+				<ul class="dot_list clearfix">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+				<span class="head_text">Applidium</span>
+				<span class="signal_box"><img class="head_signal" src="../images/task3_signal_03.png" /></span>
+			</div>
 			<span class="head_time">11:27 AM</span>
 			<ul class="battery">
 				<li class="bat_percent">100 %</li>
