--- a/about/index.html
+++ b/about/index.html
@@ -121,7 +121,7 @@ layout: page
 						年龄渐长、项目经验欠缺，我知道我没有求职优势，但是我希望您能考虑一下我的潜能：耐心、细心、有责任心，沉得住心，不轻言放弃。也许我记不住某个标签的某个属性，也许我又忘了某个函数怎么用，也许我想不起来某个功能怎么实现，但我知道去哪里找答案，可以在搜索引擎里查，w3c、MDN、github、阮一峰、各路大神的教程里写的很详细；还可以看别人网站的类似功能怎么实现，F12真的很好用。
 					</p>
 					<p>
-						读到这里，如果您有那么一丁点觉得我是个可用之才，请您为我保留一个试用机会，通过drinkjch@163.com告诉我，不胜感激！我想用行动向您证明您的识人之明。
+						读到这里，如果您有那么一丁点觉得我是个可用之才，请您为我保留一个试用机会，通过drinkjch@163.com告诉我，不胜感激！我将用行动向您证明您的识人之明。
 					</p>
 				</article>
 			</section>
