--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,7 @@ layout: page
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="index.css" rel="stylesheet" />
 	<script src="fontawesome-all.min.js"></script>
 </head>
