--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,8 @@ layout: page
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="index.css" rel="stylesheet" />
 	<script src="fontawesome-all.min.js"></script>
+	<script src="jquery-3.2.1.slim.min.js"></script>
+	<script src="index.js"></script>
 </head>
 <body>
 		<div class="resume_wrap">
@@ -29,8 +31,8 @@ layout: page
 
 				<ul class="h_info">
 					<li><i class="fas fa-comment-alt"></i><span>drinkjch@163.com</span></li>
-					<li><i class="fas fa-star"></i><a target="_blank" href="https://giselle527.github.io/">我的部落格</a></li>
-					<li><i class="fab fa-github-alt"></i><a target="_blank" href="https://github.com/giselle527">我的Github</a></li>	
+					<li><i class="fas fa-star"></i><a target="_blank" href="https://giselle527.github.io/">点我看我的部落格</a></li>
+					<li><i class="fab fa-github-alt"></i><a target="_blank" href="https://github.com/giselle527">点我看我的Github</a></li>	
 					<li><i class="fas fa-home"></i><span>现居帝都酒仙桥</span></li>		
 					<li><i class="fas fa-hand-point-right"></i><span>寻前端或相关职位</span></li>
 				</ul>
