--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,6 @@ layout: page
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="index.css" rel="stylesheet" />
-	<script src="fontawesome-all.min.js"></script>
 	<script src="jquery-3.2.1.slim.min.js"></script>
 	<script src="index.js"></script>
 </head>
@@ -30,11 +29,11 @@ layout: page
 				</div>
 
 				<ul class="h_info">
-					<li><i class="fas fa-comment-alt"></i><span>drinkjch@163.com</span></li>
-					<li><i class="fas fa-star"></i><a target="_blank" href="https://giselle527.github.io/">点我看我的部落格</a></li>
-					<li><i class="fab fa-github-alt"></i><a target="_blank" href="https://github.com/giselle527">点我看我的Github</a></li>	
-					<li><i class="fas fa-home"></i><span>现居帝都酒仙桥</span></li>		
-					<li><i class="fas fa-hand-point-right"></i><span>寻前端或相关职位</span></li>
+					<li><span class="h_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M576 240c0 115-129 208-288 208-48.3 0-93.9-8.6-133.9-23.8-40.3 31.2-89.8 50.3-142.4 55.7-5.2.6-10.2-2.8-11.5-7.7-1.3-5 2.7-8.1 6.6-11.8 19.3-18.4 42.7-32.8 51.9-94.6C21.9 330.9 0 287.3 0 240 0 125.1 129 32 288 32s288 93.1 288 208zm-416-48c-26.5 0-48 21.5-48 48s21.5 48 48 48 48-21.5 48-48-21.5-48-48-48zm128 0c-26.5 0-48 21.5-48 48s21.5 48 48 48 48-21.5 48-48-21.5-48-48-48zm128 0c-26.5 0-48 21.5-48 48s21.5 48 48 48 48-21.5 48-48-21.5-48-48-48z"/></svg></span><span>drinkjch@163.com</span></li>
+					<li><span class="h_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"/></svg></span><a target="_blank" href="https://giselle527.github.io/">点我看看部落格</a></li>
+					<li><span class="h_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"><path fill="currentColor" d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z"/></svg></span><a target="_blank" href="https://github.com/giselle527">点我瞧瞧Github</a></li>	
+					<li><span class="h_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M488 312.7V456c0 13.3-10.7 24-24 24H348c-6.6 0-12-5.4-12-12V356c0-6.6-5.4-12-12-12h-72c-6.6 0-12 5.4-12 12v112c0 6.6-5.4 12-12 12H112c-13.3 0-24-10.7-24-24V312.7c0-3.6 1.6-7 4.4-9.3l188-154.8c4.4-3.6 10.8-3.6 15.3 0l188 154.8c2.7 2.3 4.3 5.7 4.3 9.3zm83.6-60.9L488 182.9V44.4c0-6.6-5.4-12-12-12h-56c-6.6 0-12 5.4-12 12V117l-89.5-73.7c-17.7-14.6-43.3-14.6-61 0L4.4 251.8c-5.1 4.2-5.8 11.8-1.6 16.9l25.5 31c4.2 5.1 11.8 5.8 16.9 1.6l235.2-193.7c4.4-3.6 10.8-3.6 15.3 0l235.2 193.7c5.1 4.2 12.7 3.5 16.9-1.6l25.5-31c4.2-5.2 3.4-12.7-1.7-16.9z"/></svg></span><span>现居帝都酒仙桥</span></li>		
+					<li><span class="h_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M428.8 137.6h-86.177a115.52 115.52 0 0 0 2.176-22.4c0-47.914-35.072-83.2-92-83.2-45.314 0-57.002 48.537-75.707 78.784-7.735 12.413-16.994 23.317-25.851 33.253l-.131.146-.129.148C135.662 161.807 127.764 168 120.8 168h-2.679c-5.747-4.952-13.536-8-22.12-8H32c-17.673 0-32 12.894-32 28.8v230.4C0 435.106 14.327 448 32 448h64c8.584 0 16.373-3.048 22.12-8h2.679c28.688 0 67.137 40 127.2 40h21.299c62.542 0 98.8-38.658 99.94-91.145 12.482-17.813 18.491-40.785 15.985-62.791A93.148 93.148 0 0 0 393.152 304H428.8c45.435 0 83.2-37.584 83.2-83.2 0-45.099-38.101-83.2-83.2-83.2zm0 118.4h-91.026c12.837 14.669 14.415 42.825-4.95 61.05 11.227 19.646 1.687 45.624-12.925 53.625 6.524 39.128-10.076 61.325-50.6 61.325H248c-45.491 0-77.21-35.913-120-39.676V215.571c25.239-2.964 42.966-21.222 59.075-39.596 11.275-12.65 21.725-25.3 30.799-39.875C232.355 112.712 244.006 80 252.8 80c23.375 0 44 8.8 44 35.2 0 35.2-26.4 53.075-26.4 70.4h158.4c18.425 0 35.2 16.5 35.2 35.2 0 18.975-16.225 35.2-35.2 35.2zM88 384c0 13.255-10.745 24-24 24s-24-10.745-24-24 10.745-24 24-24 24 10.745 24 24z"/></svg></span><span>寻前端或相关职位</span></li>
 				</ul>
 
 			</section>
@@ -54,26 +53,26 @@ layout: page
 				<section class="m_cont"  id="resume_skill">
 					<div class="m_title">专业技能</div>
 					<ul class="m_detail">
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>能够熟练使用HTML/CSS进行响应式布局，实现标签语义化，优化页面结构，兼容web端、移动端；</li>
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>掌握HTML5/CSS3，能够灵活使用h5标签，会用CSS3实现动画效果；</li>
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>能够熟练编写原生JS，掌握DOM操作、ajax请求、面向对象编程等基础知识；</li>
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>会使用less工具编写css；</li>
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>会使用git工具进行版本控制，会使用命令行语句；</li>
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>会使用sublime、webstorm、dreamweaver等前端常用软件工具；</li>
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>会使用控制台工具查看并辅助解决程序错误；</li>
-						<li><span class="m_icon"><i class="fas fa-circle"></i></span>会使用PS软件，会用PS切图，会制作雪碧图。</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>能够熟练使用HTML/CSS进行响应式布局，实现标签语义化，优化页面结构，兼容web端、移动端；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>掌握HTML5/CSS3，能够灵活使用h5标签，会用CSS3实现动画效果；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>能够熟练编写原生JS，掌握DOM操作、ajax请求、面向对象编程等基础知识；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用less工具编写css；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用git工具进行版本控制，会使用命令行语句；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用sublime、webstorm、dreamweaver等前端常用软件工具；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用控制台工具查看并辅助解决程序错误；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用PS软件，会用PS切图，会制作雪碧图。</li>
 					</ul>
 				</section>
 				<section class="m_cont" id="resume_education">
 					<div class="m_title">教育背景</div>
 					<ul class="m_detail m_education">
 						<li>
-							<span class="m_icon"><i class="fas fa-circle"></i></span>2013.02-2016.01
+							<span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>2013.02-2016.01
 							<span class="m_school">北京大学英语翻译专业</span>
 							<span class="m_edubg">成人本科（获学士学位）</span>
 						</li>
 						<li>
-							<span class="m_icon"><i class="fas fa-circle"></i></span>2007.09-2009.07
+							<span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>2007.09-2009.07
 							<span class="m_school">中华女子学院文秘专业</span>
 							<span class="m_edubg">统招大专</span>
 						</li>
@@ -84,25 +83,25 @@ layout: page
 					<div class="m_title">工作经历</div>
 					<ul class="m_detail m_job">
 						<li>
-							<span class="m_icon"><i class="fas fa-circle"></i></span>
+							<span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>
 							2014.08-2016.09
 							<span class="m_company">北京澄怀科技有限公司（太傻留学）</span>
 							<span class="m_post">编辑：负责策划公司的宣传杂志，包括定选题、原创文章、约稿、校对等；编写公司宣传单页、桌贴、网页专题等的文案。</span>
 						</li>
 						<li>
-							<span class="m_icon"><i class="fas fa-circle"></i></span>
+							<span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>
 							2011.04-2014.06
 							<span class="m_company">北京源泉音乐文化传媒有限公司</span>
 							<span class="m_post">编辑：从互联网上搜集整理专辑及歌曲、歌手等信息，运用专业软件对音源进行处理，最后将整理好的音乐数据导入到数据库中。</span>
 						</li>
 						<li>
-							<span class="m_icon"><i class="fas fa-circle"></i></span>
+							<span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>
 							2010.09-2011.02
 							<span class="m_company">北京三快科技有限公司（美团网）</span>
 							<span class="m_post">客服：接听咨询电话，处理投诉，进行页面回复等。</span>
 						</li>
 						<li>
-							<span class="m_icon"><i class="fas fa-circle"></i></span>
+							<span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>
 							2009.07-2010.07
 							<span class="m_company">北京正典文化有限公司</span>
 							<span class="m_post">校对员：校对各行各业的文字稿件，查找并校正红错、语病、别字等。</span>
