--- a/about/index.html
+++ b/about/index.html
@@ -120,10 +120,10 @@ layout: page
 						css3、svg画图、面向对向编程、DOM、BOM、ajax、jquery、nodejs、队列、栈……一遍遍学，一遍遍忘，再学，再忘，笔记做了一堆，时至今日还是感觉自己什么都不会。如果你问我文档流，我可能要反应好一会，因为我在用它，但不常听到它。这么长时间的孤独自学路上，见过很多人放弃，各种言论都有，比如互联网的衰败期、前端饱和、更新太快等等。我也有过犹豫，退缩，怀疑，因此还浪费了大量的时间，可是我还是坚持到了今天，只因为不想就这么放弃。
 					</p>
 					<p>
-						年龄渐长、项目经验欠缺，我知道我没有求职优势，但是我希望您能考虑一下我的潜能：耐心、细心、有责任心，沉得住心，不轻言放弃。也许我记不住某个标签的某个属性，也许我又忘了某个函数怎么用，也许我想不起来某个功能怎么实现，但我知道去哪里找答案，可以在搜索引擎里查，w3c、MDN、github、阮一峰、各路大神的教程里写的很详细；还可以看别人网站的类似功能怎么实现，F12真的很好用。
+						年龄渐长、项目经验欠缺，我知道我没有求职优势，但是我希望您能考虑一下我的潜能：耐心、细心、有责任心，沉得下心，不轻言放弃。也许我记不住某个标签的某个属性，也许我又忘了某个函数怎么用，也许我想不起来某个功能怎么实现，但我知道去哪里找答案，可以在搜索引擎里查，w3c、MDN、github以及阮一峰、张鑫旭等各路大神的教程里写的很详细；还可以看别人网站的类似功能怎么实现，F12真的很好用。
 					</p>
 					<p>
-						读到这里，如果您有那么一丁点觉得我是个可用之才，请您为我保留一个试用机会，通过drinkjch@163.com告诉我，不胜感激！我将用行动向您证明您的识人之明。
+						看到这里，只要您有那么一丁点觉得我是个可用之才，请您为我保留一个试用机会，通过drinkjch@163.com告诉我，我将竭尽全力向您证明您的选择是对的！
 					</p>
 				</article>
 			</section>
