--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@ type: about
 						<a href="#resume_skill">专业技能</a>
 						<a href="#resume_education">教育背景</a>
 						<a href="#resume_workhistory">工作经历</a>
-						<a href="#resume_selfintro">求职自荐</a>
+						<a href="#resume_selfintro">自我评价</a>
 					</nav>
 				</article>
 
@@ -59,6 +59,8 @@ type: about
 						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>能够熟练编写原生JS，掌握DOM操作、ajax请求、面向对象编程等基础知识；</li>
 						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用less工具编写css；</li>
 						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用git工具进行版本控制，会使用命令行语句；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会用npm、nodejs等搭建编程环境；</li>
+						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会用php、apache、nginx等搭建测试环境；</li>
 						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用sublime、webstorm、dreamweaver等前端常用软件工具；</li>
 						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用控制台工具查看并辅助解决程序错误；</li>
 						<li><span class="m_icon"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"></path></svg></span>会使用PS软件，会用PS切图，会制作雪碧图。</li>
@@ -110,21 +112,12 @@ type: about
 					</ul>
 				</section>
 				<article class="m_intro" id="resume_selfintro">
-					<h2>求职信</h2>
+					<h2>自我评价</h2>
 					<p>
-						在16年9月前，编程对我来说是“高大上的脑力”工作，和我这个毕业后一直从事文职工作的文科生没有任何关系。当时正值职业倦怠期，想换一份有技术含量的工作。偶然听人说起前端，说它是代码世界最薄弱的一环。于是我便开始接触、了解、自学、买书，在慕课网上跟着视频学，读完了《Head First HTML与CSS、XHTML》。接着遇到JS，有难度，于是报班培训了四个月。
+						我是一个耐心、细心、有责任心，沉得下心，不轻言放弃的姑娘。我从16年八九月份开始接触前端，便一发不可收拾。在网上跟着视频敲代码，读完练完《Head First HTML与CSS、XHTML》等书籍，辞职报班学习JS，加入自学大军，编写自己感兴趣的DEMO（[减重打卡表](https://github.com/giselle527/front-end/tree/master/loseweight%20sheet)、[简易倒计时](https://github.com/giselle527/front-end/blob/master/Countdown%20Timer.html)、[晚餐吃什么](https://github.com/giselle527/Exercise/tree/master/what's%20for%20dinner)等等），做各种[小练习](https://github.com/giselle527/Exercise)。css3、svg画图、面向对向编程、DOM、BOM、ajax、jquery、nodejs、队列、栈等知识和相关代码敲了一遍又一遍。某个知识点不了解，某个功能不会实现的时候，我也知道去哪里找答案，可以在搜索引擎里查，w3c、MDN、github以及阮一峰、张鑫旭等各路大神的教程里写的很详细；还可以看别人网站的类似功能怎么实现，F12真的很好用。
 					</p>
 					<p>
-						可能您会有疑问：为什么不在简历里写培训经验？因为我什么都没学到。JS的知识像海一样广博，这四个月里接触了太多知识，我对前后端有了了解，知道了前端的知识体系，各种代码库，还根据兴趣写了一些小demo（减重打卡表、简易倒计时、晚餐吃什么等等）。可惜知识点吸收的不好，等于不会。四个月走得非常快，什么都没有学会的我，没有底气投简历，于是又开始了自学之路。
-					</p>
-					<p>
-						css3、svg画图、面向对向编程、DOM、BOM、ajax、jquery、nodejs、队列、栈……一遍遍学，一遍遍忘，再学，再忘，笔记做了一堆，时至今日还是感觉自己什么都不会。如果你问我文档流，我可能要反应好一会，因为我在用它，但不常听到它。这么长时间的孤独自学路上，见过很多人放弃，各种言论都有，比如互联网的衰败期、前端饱和、更新太快等等。我也有过犹豫，退缩，怀疑，因此还浪费了大量的时间，可是我还是坚持到了今天，只因为不想就这么放弃。
-					</p>
-					<p>
-						年龄渐长、项目经验欠缺，我知道我没有求职优势，但是我希望您能考虑一下我的潜能：耐心、细心、有责任心，沉得下心，不轻言放弃。也许我记不住某个标签的某个属性，也许我又忘了某个函数怎么用，也许我想不起来某个功能怎么实现，但我知道去哪里找答案，可以在搜索引擎里查，w3c、MDN、github以及阮一峰、张鑫旭等各路大神的教程里写的很详细；还可以看别人网站的类似功能怎么实现，F12真的很好用。
-					</p>
-					<p>
-						看到这里，只要您有那么一丁点觉得我是个可用之才，请您为我保留一个试用机会，通过drinkjch@163.com告诉我，我将竭尽全力向您证明您的选择是对的！
+						如果您觉得我是个可用之才，请您为我保留一个试用机会，通过drinkjch@163.com告诉我，我将竭尽全力向您证明您的选择是对的！
 					</p>
 				</article>
 			</section>
