add dinner post

--- a/exercise/what's for dinner/what's for dinner.html
+++ b/exercise/what's for dinner/what's for dinner.html
@@ -84,7 +84,7 @@
 	 		};
 	 	}
 
-	 	var arr=["粥","卷饼","麻辣烫","烤冷面"];
+	 	var arr=["粥","卷饼","麻辣烫","烤冷面"]; //这里手动添加晚餐选项
 	 	var x = arr.length-1;
 	 	var y = Math.round( Math.random()*x );
 
@@ -112,17 +112,6 @@
 	 	    document.onmousedown= function(){return false;};
 	 	    document.onmouseup= function(){return true;};
 	 	}
-
-	 	// 0. 粥 （家中常备咸鸭蛋和大米）
-	 	// 1. 卷饼
-	 	// 2. 麻辣烫（十字路口家的）
-	 	// 3. 烤冷面
-	 	// 红豆粥/绿豆粥：米饭、豆、糖/冰糖、牛奶
-	 	// 浓汤宝
-	 	// 盒装咖喱
-	 	// 味增汤+米饭
-	 	// 碱水面
-
 
 	 </script>
 	
