--- a/_posts/2018-03-08-color.html
+++ b/_posts/2018-03-08-color.html
@@ -17,3 +17,6 @@ tags: [color, 颜色]
     <span style="background:#feffd5; display:inline-block; width:50px; text-align:center; margin-right:3px;">8</span>
     <span style="background:#DAC8A7; display:inline-block; width:50px; text-align:center; margin-right:3px;">9</span>
     <span style="background:#FF6666; display:inline-block; width:50px; text-align:center; margin-right:3px;">10</span>
+    <span style="background:#df4644; display:inline-block; width:50px; text-align:center; margin-right:3px;">11</span>
+    <span style="background:#235058; display:inline-block; width:50px; text-align:center; margin-right:3px;">12</span>
+    <span style="background:#f7e2c2; display:inline-block; width:50px; text-align:center; margin-right:3px;">13</span>
