--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@ type: about
 				<article class="m_intro" id="resume_selfintro">
 					<h2>自我评价</h2>
 					<p>
-						我是一个耐心、细心、有责任心，沉得下心，不轻言放弃的姑娘。我从16年八九月份开始接触前端，便一发不可收拾。在网上跟着视频敲代码，读完练完《Head First HTML与CSS、XHTML》等书籍，辞职报班系统学习Javascript和前端知识，加入自学大军，编写感兴趣的DEMO（<a href="/exercise/loseweight sheet/12.21-loseweight.html">减重打卡表</a>、<a href="/exercise/CountdownTimer/index.html">简易倒计时</a>、<a href="/exercise/what's for dinner/what's for dinner.html">晚餐吃什么</a>等等），做各种<a href="https://github.com/giselle527/Exercise">小练习</a>检验代码效果，一遍遍地学习CSS3、SVG画图、面向对向编程、DOM、BOM、ajax、jquery、nodejs、队列、栈等知识并敲相关代码……
+						我是一个耐心、细心、有责任心，沉得下心，不轻言放弃的姑娘。我从16年八九月份开始接触前端，便一发不可收拾。在网上跟着视频敲代码，读完练完《Head First HTML与CSS、XHTML》等书籍，辞职报班系统学习Javascript和前端知识，加入自学大军，编写感兴趣的DEMO（<a href="/exercise/querytime/index.html">查询国际时间</a>、<a href="/exercise/loseweight sheet/12.21-loseweight.html">减重打卡表</a>、<a href="/exercise/CountdownTimer/index.html">简易倒计时</a>、<a href="/exercise/what's for dinner/what's for dinner.html">晚餐吃什么</a>等等），做各种<a href="https://github.com/giselle527/Exercise">小练习</a>检验代码效果，一遍遍地学习CSS3、SVG画图、面向对向编程、DOM、BOM、ajax、jquery、nodejs、队列、栈等知识并敲相关代码……
 					</p>
 					<p>
 						如果您觉得我是个可用之才，请您为我保留一个试用机会，通过drinkjch@163.com告诉我，我将竭尽全力向您证明您的选择是对的！
